# nex

./: .gitignore  CMakeLists.txt  INFO.md  README.md  test  test.asm
.cache/clangd/index/: ast.hpp.C1D038BA8C3872CF.idx  ast.hpp.DEF9FEDAA95F4CBF.idx  generator.cpp.544A3C3F5BEBA302.idx  generator.cpp.CA547D10B1AC33AC.idx  generator.hpp.91601CE2DE21B661.idx  generator.hpp.B272F7CE48A9CAFA.idx  main.cpp.4CE9A8F72D0EDE24.idx  main.cpp.DB87A49212FD08E7.idx  parser.cpp.703E491E091442CA.idx  parser.cpp.76C9FF18BCDE721E.idx  parser.hpp.ED4CA74F927588A6.idx  parser.hpp.FE6091D83F81E815.idx  tokenizer.cpp.7FC29AA747BE718C.idx  tokenizer.cpp.9BE12D4CCD4905E9.idx  tokenizer.hpp.7E9D9B3AF53906F0.idx  tokenizer.hpp.DC6409074493EF30.idx
compiler/src/: CMakeLists.txt  main.cpp
compiler/src/backend/: generator.cpp  generator.hpp
compiler/src/frontend/: \  ast.hpp  parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp
docs/: DOCS.md
src/: CMakeLists.txt  Makefile  ast.cpp  ast.hpp  generator.cpp  generator.hpp  main.cpp  parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp
src/backend/: generator.cpp  generator.hpp
src/frontend/: ast.cpp  ast.hpp  parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp
tests/: main.nex  main2.nl  main3.nex  main4.nex  main5.nl
